WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83433
combine exceptionNames and exceptionDescriptions in IDBDatabaseException.cpp into one array
https://bugs.webkit.org/show_bug.cgi?id=83433
Summary
combine exceptionNames and exceptionDescriptions in IDBDatabaseException.cpp ...
Lu Guanqun
Reported
2012-04-08 08:55:14 PDT
combine exceptionNames and exceptionDescriptions in IDBDatabaseException.cpp into one array
Attachments
Patch
(5.27 KB, patch)
2012-04-08 09:04 PDT
,
Lu Guanqun
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lu Guanqun
Comment 1
2012-04-08 09:04:54 PDT
Created
attachment 136148
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-09 23:19:14 PDT
Comment on
attachment 136148
[details]
Patch Clearing flags on attachment: 136148 Committed
r113689
: <
http://trac.webkit.org/changeset/113689
>
WebKit Review Bot
Comment 3
2012-04-09 23:19:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug