combine exceptionNames and exceptionDescriptions in IDBDatabaseException.cpp into one array https://bugs.webkit.org/show_bug.cgi?id=83433

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-04-09
Reviewed by Kentaro Hara.

No new tests required.

* Modules/indexeddb/IDBDatabaseException.cpp:
(IDBDatabaseExceptionNameDescription):
(WebCore):
(WebCore::IDBDatabaseException::initializeDescription):

Canonical link: https://commits.webkit.org/100999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113689 268f45cc-cd09-0410-ab3c-d52691b4dbfc